Add new blog posts and update internal links
Added several new posts with images covering topics such as time and money, MLA/APA citation tools, UTSC course selection, and more. Updated internal links in two existing posts to point to new URLs for related articles.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -116,6 +116,10 @@
     @apply cursor-zoom-in
 }
 
+#post-cover {
+    @apply max-h-[16rem] flex items-center justify-center
+}
+
 ::selection {
     background-color: var(--selection-bg)
 }
